--- a/6.6.0/Dockerfile
+++ b/6.6.0/Dockerfile
@@ -9,14 +9,6 @@ RUN apt-get update -qq \
     && apt-get autoremove --yes \
     && rm -rf /var/lib/{apt,dpkg,cache,log}/
 
-# Use the default unprivileged account. This could be considered bad practice
-# on systems where multiple processes end up being executed by 'daemon' but
-# here we only ever run one process anyway.
-ENV RUN_USER            atlassian
-ENV RUN_USER_UID        5000
-ENV RUN_GROUP           atlassian
-ENV RUN_GROUP_GID       5000
-
 # Oracle JDK
 ENV ORACLE_JDK_VERSION jdk-8u151
 ENV ORACLE_JDK_URL http://download.oracle.com/otn-pub/java/jdk/8u151-b12/e758a0de34e24606bca991d704f6dcbf/jdk-8u151-linux-x64.tar.gz
@@ -27,30 +19,26 @@ RUN mkdir -p /opt/jdk/$ORACLE_JDK_VERSION && \
     update-alternatives --install /usr/bin/java java /opt/jdk/$ORACLE_JDK_VERSION/bin/java 100 && \
     update-alternatives --install /usr/bin/javac javac /opt/jdk/$ORACLE_JDK_VERSION/bin/javac 100
 
-ENV DOWNLOAD_URL        https://downloads.atlassian.com/software/confluence/downloads/atlassian-confluence-
-
-ENV CONFLUENCE_HOME /opt/atlassian/confluence/data
-
 ENV JAVA_HOME /opt/jdk/${ORACLE_JDK_VERSION}
 ENV JAVA_TRUSTSTORE ${JAVA_HOME}/jre/lib/security/cacerts
 ENV JAVA_TRUSTSTORE_PASSWORD changeit
 
 ENV CATALINA_OPTS "-Djavax.net.ssl.trustStore=${JAVA_TRUSTSTORE} -Djavax.net.ssl.trustStorePassword=${JAVA_TRUSTSTORE_PASSWORD}"
 
-ENV CONFLUENCE_INSTALL_DIR   /opt/atlassian/confluence
+ENV RUN_USER            atlassian
+ENV RUN_USER_UID        5000
+ENV RUN_GROUP           atlassian
+ENV RUN_GROUP_GID       5000
+
 ENV CONFLUENCE_VERSION 6.6.0
+ENV CONFLUENCE_HOME /var/atlassian/confluence/data
+ENV CONFLUENCE_INSTALL_DIR   /opt/atlassian/confluence
+ENV DOWNLOAD_URL        https://downloads.atlassian.com/software/confluence/downloads/atlassian-confluence-
 
-RUN mkdir -p                             ${CONFLUENCE_INSTALL_DIR} \
-    && curl -L --silent                  ${DOWNLOAD_URL}${CONFLUENCE_VERSION}.tar.gz | tar -xz --strip=1 -C "$CONFLUENCE_INSTALL_DIR" \
-    && mkdir -p                          ${CONFLUENCE_INSTALL_DIR}/conf/Catalina      \
-    && chown -R root:root                ${CONFLUENCE_INSTALL_DIR}/                   \
-    && chmod -R 755                      ${CONFLUENCE_INSTALL_DIR}/                   \
-    && chmod -R 700                      ${CONFLUENCE_INSTALL_DIR}/conf/Catalina      \
-    && chmod -R 700                      ${CONFLUENCE_INSTALL_DIR}/logs               \
-    && chmod -R 700                      ${CONFLUENCE_INSTALL_DIR}/temp               \
-    && chmod -R 700                      ${CONFLUENCE_INSTALL_DIR}/work             
+RUN mkdir -p ${CONFLUENCE_HOME} ${CONFLUENCE_INSTALL_DIR} && \
+    curl -L --silent ${DOWNLOAD_URL}${CONFLUENCE_VERSION}.tar.gz | tar -xz --strip=1 -C "$CONFLUENCE_INSTALL_DIR" && \
+    chown -R ${RUN_USER}:${RUN_GROUP} ${CONFLUENCE_HOME} ${CONFLUENCE_INSTALL_DIR}     
 
-# MySQL connector, mail api, activation api
 # MySQL connector
 ENV MYSQL_CONNECTOR_VERSION 5.1.44
 RUN \
@@ -60,8 +48,7 @@ RUN \
     rm -rf ${CONFLUENCE_INSTALL_DIR}/mysql-connector-java-${MYSQL_CONNECTOR_VERSION}.tar.gz ${CONFLUENCE_INSTALL_DIR}/mysql-connector-java-${MYSQL_CONNECTOR_VERSION}
 
 # Confluence home dir
-RUN \
-    echo "confluence.home=${CONFLUENCE_HOME}" > ${CONFLUENCE_INSTALL_DIR}/confluence/WEB-INF/classes/confluence-init.properties
+RUN echo "confluence.home=${CONFLUENCE_HOME}" > ${CONFLUENCE_INSTALL_DIR}/confluence/WEB-INF/classes/confluence-init.properties
 
 ENV PATH $CONFLUENCE_INSTALL_DIR/bin:$JAVA_HOME/bin:$PATH
 
