--- a/6.12.0/docker-compose.yml
+++ b/6.12.0/docker-compose.yml
@@ -3,25 +3,22 @@ services:
   postgres:
     image: postgres:9.3
     ports:
-        - "${BIND_IP}:5432:5432"
-    environment:
-        - POSTGRES_USER=confluence
-        - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-confluence}
-        - POSTGRES_DB=confluence
-        - TZ={TZ:-UTC}
+        - "5432:5432"
+    env_file:
+      - .env
     volumes:
         - postgres-data:/var/lib/postgresql/data
   confluence:
     build: .
     image: webinventions/atlassian-confluence:6.12.0
     ports:
-      - "${BIND_IP}:8080:8080"
+      - "8080:8080"
     depends_on:
       - postgres
     links:
       - postgres
-    environment:
-      TZ: ${TZ:-UTC}
+    env_file:
+      - .env
     volumes:
       - confluence-data:/var/atlassian/confluence/data
 volumes:
